--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   pull_to_refresh: ^1.1.6
+  transparent_image: ^0.1.0
 
 dev_dependencies:
   flutter_test:
