--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
 
   random_user: ^0.1.0
   flutter_lorem: ^1.1.0
+  google_sign_in: ^4.0.1
+  googleapis: ^0.52.0+1
 
 dev_dependencies:
   flutter_test:
