--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_lorem: ^1.1.0
   google_sign_in: ^4.0.1
   googleapis: ^0.52.0+1
+  quiver: ^2.0.1
 
 dev_dependencies:
   flutter_test:
